--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "tsc": "tsc",
     "tsc:init": "tsc --init",
-    "dev": "nodemon --config nodemon.json src/index.ts"
+    "dev": "nodemon --config nodemon.json src/index.ts",
+    "start": "tsc && node dist/app.js"
   },
   "repository": {
     "type": "git",
