--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-swagger-generator": "^1.1.17",
     "pg": "^8.7.3",
     "sequelize": "^6.16.3"
   }
