--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tsc": "tsc",
     "tsc:init": "tsc --init",
     "dev": "nodemon --config nodemon.json src/index.ts",
-    "start": "tsc && node dist/app.js"
+    "start": "tsc && node dist/app.js",
+    "lint": "eslint -c .eslintrc.js --fix --fix-type problem,suggestion,layout ."
   },
   "repository": {
     "type": "git",
