--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tsc:init": "tsc --init",
     "dev": "nodemon --config nodemon.json src/index.ts",
     "start": "tsc && node dist/app.js",
-    "lint": "eslint -c .eslintrc.js --fix --fix-type problem,suggestion,layout ."
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,12 +23,18 @@
   "homepage": "https://github.com/timlin09/my-ts-app#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
