--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon --config nodemon.json src/index.ts",
     "start": "tsc && node dist/app.js",
     "lint": "eslint . --ext .ts",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
